# feidorian-ComfyNodes

./: .gitignore  README.md  __init__.py  design.md  log.py  pyproject.toml  utils.py
debug/: __init__.py  null_output.py
depreciated/fd_time/: LogEnd.py  LogStart.py  __init__.py
depreciated/pipes/: __init__.py  generation_data.py
js/: a_or_b.js  test copy.old
literals/: __init__.py  int.py  sampler.py  scheduler.py  string.py  text.py
loaders/: __init__.py  style_loader.py  workflow_image_loader.py
logic/: __init__.py  a_or_b.py  conditional.py  first_non_null.py  vae_encode_if_any.py
output/: __init__.py
py/debug/: __init__.py  null_output.py
py/literals/: __init__.py  cfg.py  checkpoint.py  dimension.py  seed.py
py/loaders/: __init__.py  style_loader.py  workflow_image_loader.py
py/logic/: __init__.py  a_or_b.py  conditional.py  first_non_null.py  vae_encode_if_any.py
py/output/: __init__.py  image_save.py
py/switches/: __init__.py  any_switch.py  random_switch.py
py/workflow_manager/: __init__.py  image_tagger.py  image_tagger_advanced.py
switches/: __init__.py  any_switch.py  random_switch.py
workflow-manager/: image-tagger.py
workflow_manager/: __init__.py  image_tagger.py
